--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "/src/*"
+      ]
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
